Added cost efficient allocation (#5)
* Added Api

* add-cost-efficient-allocation

* updated .gitignore

--- a/api/.gitignore
+++ b/api/.gitignore
@@ -1,19 +1,10 @@
+HELP.md
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
 
-### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
-.idea/sonarlint/issuestore/index.pb
-*.iws
-*.iml
-*.ipr
-
-### Eclipse ###
+### STS ###
 .apt_generated
 .classpath
 .factorypath
@@ -22,8 +13,11 @@ target/
 .springBeans
 .sts4-cache
 
-##Javascript
-/ui/node_modules
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
 
 ### NetBeans ###
 /nbproject/private/
@@ -37,6 +31,3 @@ build/
 
 ### VS Code ###
 .vscode/
-
-### Mac OS ###
-.DS_Store
