--- a/.github/workflows/react-deployment.yaml
+++ b/.github/workflows/react-deployment.yaml
@@ -13,21 +13,17 @@ jobs:
   build_test:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [18.x] # We will deploy with only one version of node  
-
     # Steps represent a sequence of tasks that will be executed as part of the job
+    defaults:
+      run:
+        working-directory: ./ui
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Use Node.js 18
         uses: actions/setup-node@v2
         with:
-          node-version: ${{ matrix.node-version }}
-      - name: Change directory
-        run: cd ui
+          node-version: 18
       - name: npm ci, build and test
         run: |
           npm ci
