--- a/api/pom.xml
+++ b/api/pom.xml
@@ -28,6 +28,14 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+        </dependency>
+        <dependency>
             <groupId>edu.kit.algorithms</groupId>
             <artifactId>engine</artifactId>
             <version>1.0-SNAPSHOT</version>
