--- a/.github/workflows/api-deployment.yaml
+++ b/.github/workflows/api-deployment.yaml
@@ -79,7 +79,7 @@ jobs:
           distribution: 'temurin'
 
       - name: Build with Maven
-        run: mvn clean install -DskipTests --file pom.xml
+        run: mvn -B package --file pom.xml
 
       - name: Google Auth
         id: auth
