--- a/.github/workflows/api-deployment.yaml
+++ b/.github/workflows/api-deployment.yaml
@@ -79,8 +79,8 @@ jobs:
           distribution: 'temurin'
 
       - name: Build with Maven
-        run: mvn clean install -DskipTests --file pom.xml
-
+        run: mvn -B package --file pom.xml
+        
       - name: Google Auth
         id: auth
         uses: 'google-github-actions/auth@v0'
