--- a/.github/workflows/api-deployment.yaml
+++ b/.github/workflows/api-deployment.yaml
@@ -65,9 +65,6 @@ jobs:
       id-token: 'write'
 
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./api
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -108,6 +105,7 @@ jobs:
 
       - name: Build and Push Container
         run: |-
+          cd ./api
           docker build -t "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.SERVICE }}:${{ github.sha }}" ./
           docker push "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.SERVICE }}:${{ github.sha }}"
 
