--- a/api/pom.xml
+++ b/api/pom.xml
@@ -28,6 +28,11 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+            <version>3.0.2</version>
+        </dependency>
+        <dependency>
             <groupId>edu.kit.algorithms</groupId>
             <artifactId>engine</artifactId>
             <version>1.0-SNAPSHOT</version>
